--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.application.name=backend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db_personal_finance_management?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=nambee
+spring.datasource.password=phamquang95
 
 #hibernate_properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties..hibernate.show_sql=true
 spring.jpa.properties..hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+jwt_expiration = 86400000
+jwt_secret = "yourSecret_key"
