--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=backend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db_personal_finance_management?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=phamquang95
+spring.datasource.password=nambee
 
 #hibernate_properties
 spring.jpa.hibernate.ddl-auto=update
