--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 jwt_expiration = 86400000
 jwt_secret = "yourSecret_key"
+
+# email properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=phamtienquang57@gmail.com
+spring.mail.password=ypeo akbk wfie dbzu
