--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties..hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #upload
-upload.path=D:/CodeGym/Module6/backend/backend/src/main/resources/upload/
+upload.path=G:/codegym/Module6/java/Personal-Finance-Managemen-BackEnd/src/main/resources/upload/
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 spring.web.resources.static-locations=file:${upload.path}
