--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+server.port=8080
 spring.application.name=backend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_personal_finance_management?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=phamquang95
+spring.datasource.url=${JDBC_CONNECTION_URL:}
+spring.datasource.username=${JDBC_USERNAME:}
+spring.datasource.password=${JDBC_PASSWORD:}
 
 
 #hibernate_properties
@@ -12,7 +13,7 @@ spring.jpa.properties..hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #upload
-upload.path=G:/codegym/Module6/java/Personal-Finance-Managemen-BackEnd/src/main/resources/upload/
+upload.path=${UPLOAD_PATH:}
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 spring.web.resources.static-locations=file:${upload.path}
