--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-JDBC_CONNECTION_URL=jdbc:mysql://localhost:3306/db_personal_finance_management?createDatabaseIfNotExist=true
-JDBC_USERNAME=root
-JDBC_PASSWORD=phamquang95
-UPLOAD_PATH=G:/codegym/Module6/java/Personal-Finance-Managemen-BackEnd/src/main/resources/upload/
+JDBC_CONNECTION_URL=
+JDBC_USERNAME=
+JDBC_PASSWORD=
+UPLOAD_PATH=
