--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=${JDBC_PASSWORD:}
 #hibernate_properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties..hibernate.show_sql=true
-spring.jpa.properties..hibernate.format_sql=true
+spring.jpa.properties..hibernate.format_sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #upload
