update front end host

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,5 @@ jwt_secret="yourSecret_key"
 # email properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=phamtienquang57@gmail.com
-spring.mail.password=ypeo akbk wfie dbzu
+spring.mail.username=noreply@qnsk.site
+spring.mail.password=xilj zlnl prti zlxq
