--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,19 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
 // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.1'
 // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
 	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
+
+// https://mvnrepository.com/artifact/com.google.api-client/google-api-client
+	implementation group: 'com.google.api-client', name: 'google-api-client', version: '2.6.0'
+// https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client
+	implementation group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.36.0'
+// https://mvnrepository.com/artifact/com.google.apis/google-api-services-oauth2
+	implementation group: 'com.google.apis', name: 'google-api-services-oauth2', version: 'v2-rev157-1.25.0'
+
 
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
