--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,8 @@ dependencies {
 	implementation group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.36.0'
 // https://mvnrepository.com/artifact/com.google.apis/google-api-services-oauth2
 	implementation group: 'com.google.apis', name: 'google-api-services-oauth2', version: 'v2-rev157-1.25.0'
-
+	implementation 'org.apache.poi:poi:5.2.3'          // For Excel export
+	implementation 'org.apache.poi:poi-ooxml:5.2.3'
 
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
